dark mode updated

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "Rename Brightspace course cards to friendly titles.",
 
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting", "tabs"],
   "host_permissions": ["*://*.brightspace.com/*", "*://brightspace.utrgv.edu/*"],
 
   "action": {
